# gillesdegottex_fttscarf

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
benchmark/: CMakeLists.txt  benchmark.h  plot.py  stream.h
benchmark/dft/: CMakeLists.txt  benchmark.cpp
benchmark/fftreal/: CMakeLists.txt  benchmark.cpp
benchmark/ffts/: CMakeLists.txt  benchmark.cpp
benchmark/fftw3/: CMakeLists.txt  benchmark.cpp
benchmark/ipp/: CMakeLists.txt  benchmark.cpp
benchmark/ooura/: CMakeLists.txt  benchmark.cpp
benchmark/pffft/: CMakeLists.txt  benchmark.cpp
doc/: Doxyfile  footer.html  header.html  implementations.html
fftlibs/FFTReal/: FFTReal.h  FFTReal.hpp  OscSinCos.h  OscSinCos.hpp  def.h
fftlibs/ooura/: fftsg.c  fftsg.h
fftlibs/pffft/: .hg_archival.txt
include/: fftscarf.h.in  fftscarf.h.in_footer  fftscarf_dft.h  fftscarf_fftreal.h  fftscarf_ffts.h  fftscarf_fftw3.h  fftscarf_ipp.h  fftscarf_ooura.h  fftscarf_pffft.h
src/: fftscarf.cpp  fftscarf_fftreal.cpp  fftscarf_ffts.cpp  fftscarf_fftw3.cpp  fftscarf_ipp.cpp  fftscarf_ooura.cpp  fftscarf_pffft.cpp
test/: CMakeLists.txt  test_fftlibs.cpp  test_fftplanmanager.cpp  test_misc.cpp  test_version.cpp
